feat(headless-cms): content model lifecycle hooks

--- a/docs/key-topics/headless-cms/content-models.mdx
+++ b/docs/key-topics/headless-cms/content-models.mdx
@@ -217,4 +217,4 @@ const layout = [
 ];
 ````
 
-For the next topic we would suggest reading about [lifecycle hooks](./lifecycle-hooks).
+For the next topic we would suggest reading about [content model lifecycle hooks](./lifecycle-hooks/content-model) and [content entry lifecycle hooks](./lifecycle-hooks/content-entry).
