fix(headless-cms): rename content-models file

--- a/docs/key-topics/headless-cms/content-models-explained.mdx
+++ b/docs/key-topics/headless-cms/content-models-explained.mdx
@@ -1,7 +1,7 @@
 ---
-id: content-models
-title: Content models
-sidebar_label: Content models
+id: content-models-explained
+title: Content models explained
+sidebar_label: Content models explained
 keywords: ["webiny", "content model", "headless cms", "data mapping", "dynamodb"]
 description: A deep-dive into how data models are mapped and stored to the database
 ---
@@ -217,4 +217,4 @@ const layout = [
 ];
 ````
 
-For the next topic we would suggest reading about [content model lifecycle hooks](./lifecycle-hooks/content-model) and [content entry lifecycle hooks](./lifecycle-hooks/content-entry).
+For the next topic we would suggest reading about [content model lifecycle hooks](./lifecycle-hooks/content-model.mdx) and [content entry lifecycle hooks](./lifecycle-hooks/content-entry.mdx).
