fix(headless-cms): grammarly in entry and models hooks

--- a/docs/key-topics/headless-cms/lifecycle-hooks/content-entry.mdx
+++ b/docs/key-topics/headless-cms/lifecycle-hooks/content-entry.mdx
@@ -17,7 +17,7 @@ You should read about Webiny plugins and the key topic on content entries.
 ## Overview
 We will go through a list of hooks that you can define to be executed. We will also give some examples on how the hooks can be used.
 
-For the article we will assume that we have some remote service, named `EntryService`, which stores the entries and a webhook call that can run some background process.
+For this article, we will assume that we have some remote service, named `EntryService`, which stores the entries and a webhook call that can run some background process.
 We also have `ReviewService` that handles reviews of the entries in another app.
 Also, we will split hook plugins to simplify the examples.
 
@@ -28,7 +28,7 @@ The plugin type to define the hooks is [CmsContentEntryHookPlugin](../../referen
 
 All hooks are async and are executed in the order the plugins were registered. You can check that [here](https://github.com/webiny/webiny-js/blob/v5/packages/api-headless-cms/src/content/plugins/crud/contentEntry/runContentEntryLifecycleHooks.ts).
 
-Each hook receives `context`, `model` and `entry` as a part of argument object.
+Each hook receives `context`, `model` and `entry` as a part of an argument object.
 
 ## Hooks
 
@@ -274,7 +274,7 @@ const afterUnpublish = (): CmsContentEntryHookPlugin => ({
 ```
 
 ### Before request review
-This hook is triggered before we request review for the entry revision.
+This hook is triggered before we request the review for the entry revision.
 
 What can you do in this hook? You can check on remote `ReviewService` if entry review was already requested.
 ```ts title="beforeRequestReview.ts"
@@ -291,7 +291,7 @@ const beforeRequestReview = (): CmsContentEntryHookPlugin => ({
 ```
 
 ### After request review
-This hook is triggered after we request review for the entry revision.
+This hook is triggered after we request the review for the entry revision.
 
 What can you do in this hook? You can check on remote `ReviewService` if entry review was already requested.
 ```ts title="afterRequestReview.ts"
@@ -325,9 +325,9 @@ const beforeRequestChanges = (): CmsContentEntryHookPlugin => ({
 ```
 
 ### After request changes
-This hook is triggered after we request review for the entry revision.
+This hook is triggered after we request changes for the entry revision.
 
-What can you do in this hook?  You can now store the request change on the entry.
+What can you do in this hook? You can now store the request change on the entry.
 ```ts title="afterRequestChanges.ts"
 const afterRequestChanges = (): CmsContentEntryHookPlugin => ({
 	type: "content-entry-hook",
@@ -343,4 +343,4 @@ const afterRequestChanges = (): CmsContentEntryHookPlugin => ({
 
 
 ## Conclusion
-There are a lot of hooks, yes, but probably will not use most of them. Also, feel free to define hooks in a single plugin, eg. Memcache hooks should be in a single plugin.
+There are a lot of hooks, yes, but probably will not use most of them. Also, feel free to define hooks in a single plugin. For example, Memcache hooks should be in a single plugin.
