--- a/docs/key-topics/headless-cms/lifecycle-hooks/content-models.mdx
+++ b/docs/key-topics/headless-cms/lifecycle-hooks/content-models.mdx
@@ -15,9 +15,11 @@ description: An explanation of lifecycle hooks plugins for content models
 You should read about Webiny plugins and the key topic on content models.
 
 ## Overview
-We will go through a list of hooks that you can define to be executed. We will also give some examples on how the hooks can be used.
+We will go through a list of hooks that you can define to be executed.
+We will also give some examples on how the hooks can be used.
 
-For the article we will assume that we have some remote service, named `ModelService`, that also stores models. Also, we will split hook plugins to simplify the examples.
+For the article we will assume that we have some remote service, named `ModelService`, that also stores models.
+Also, we will split hook plugins to simplify the examples.
 
 In the hooks you can modify the values of the model object, but we do not recommend it.
 
@@ -26,7 +28,7 @@ The plugin type to define the hooks is [CmsContentModelHookPlugin](../../referen
 
 All hooks are async and are executed in the order the plugins were registered. You can check that [here](https://github.com/webiny/webiny-js/blob/v5/packages/api-headless-cms/src/content/plugins/crud/contentModel/runContentModelLifecycleHooks.ts).
 
-Each hook receives `context` and `model` as a part of argument object, except the `beforeSave` hook which also receives modified `data` object.
+Each hook receives `context` and `model` as a part of an argument object, except the `beforeSave` hook which also receives modified `data` object.
 
 ## Hooks
 ### Before create
@@ -124,7 +126,8 @@ const modelServiceAfterUpdate = (): CmsContentModelHookPlugin => ({
 ### Before delete
 This hook is triggered before we delete the content model from the storage.
 
-We use this hook to make sure that there are no entries in given content model. We do not allow deletion of content models that have entries.
+We use this hook to make sure that there are no entries in a given content model.
+We do not allow deletion of content models that have entries.
 
 What can you do in this hook? You can check if model has some related data in the `ModelService`.
 ```ts title="modelServiceBeforeDelete.ts"
