feat(headless-cms): add references to sidebar

--- a/docs/key-topics/headless-cms/lifecycle-hooks/content-models.mdx
+++ b/docs/key-topics/headless-cms/lifecycle-hooks/content-models.mdx
@@ -24,7 +24,7 @@ Also, we will split hook plugins to simplify the examples.
 In the hooks you can modify the values of the model object, but we do not recommend it.
 
 ## Plugin type
-The plugin type to define the hooks is [CmsContentModelHookPlugin](../../references/headless-cms/api/cmscontentmodelhookplugin.mdx).
+The plugin type to define the hooks is [CmsContentModelHookPlugin](../../references/headless-cms/api/interfaces/cmscontentmodelhookplugin).
 
 All hooks are async and are executed in the order the plugins were registered. You can check that [here](https://github.com/webiny/webiny-js/blob/v5/packages/api-headless-cms/src/content/plugins/crud/contentModel/runContentModelLifecycleHooks.ts).
 
