fix(references): remove .md extensions from docs

--- a/docs/key-topics/headless-cms/lifecycle-hooks/content-models.mdx
+++ b/docs/key-topics/headless-cms/lifecycle-hooks/content-models.mdx
@@ -78,7 +78,7 @@ const modelServiceAfterCreate = (): CmsContentModelHookPlugin => ({
 ### Before update
 This hook is triggered before we store the updated content model to the storage.
 This is a bit specific hook since it receives a data object which contains changes from the input.
-Arguments interface is [CmsContentModelUpdateHookPluginArgs](../../reference/headless-cms/api/cmscontentmodelupdatehookpluginargs.mdx).
+Arguments interface is [CmsContentModelUpdateHookPluginArgs](../../reference/headless-cms/api/cmscontentmodelupdatehookpluginargs).
 
 We use this hook to check if `titleFieldId` changed and if it is set correctly according to our specifications.
 Also, we check if any field that has been used in the entries was removed or changed, and we do not allow it.
