--- a/docs/key-topics/headless-cms/content-models-explained.mdx
+++ b/docs/key-topics/headless-cms/content-models-explained.mdx
@@ -217,4 +217,4 @@ const layout = [
 ];
 ````
 
-For the next topic we would suggest reading about [content model lifecycle hooks](./lifecycle-hooks/content-models.mdx) and [content entry lifecycle hooks](./lifecycle-hooks/content-entry.mdx).
+For the next topic we would suggest reading about [content model lifecycle hooks](./lifecycle-hooks/content-models) and [content entry lifecycle hooks](./lifecycle-hooks/content-entry).
