ci(references): fix broken links

--- a/docs/key-topics/headless-cms/lifecycle-hooks/content-entry.mdx
+++ b/docs/key-topics/headless-cms/lifecycle-hooks/content-entry.mdx
@@ -24,7 +24,7 @@ Also, we will split hook plugins to simplify the examples.
 In the hooks you can modify the values of the entry object, but we do not recommend it.
 
 ## Plugin type
-The plugin type to define the hooks is [CmsContentEntryHookPlugin](../../references/headless-cms/api/cmscontententryhookplugin).
+The plugin type to define the hooks is [CmsContentEntryHookPlugin](../../../references/headless-cms/api/interfaces/cmscontententryhookplugin).
 
 All hooks are async and are executed in the order the plugins were registered. You can check that [here](https://github.com/webiny/webiny-js/blob/v5/packages/api-headless-cms/src/content/plugins/crud/contentEntry/runContentEntryLifecycleHooks.ts).
 
