--- a/docs/key-topics/headless-cms/lifecycle-hooks/content-model.mdx
+++ b/docs/key-topics/headless-cms/lifecycle-hooks/content-model.mdx
@@ -24,7 +24,7 @@ Also, we will split hook plugins to simplify the examples.
 In the hooks you can modify the values of the model object, but we do not recommend it.
 
 ## Plugin type
-The plugin type to define the hooks is [CmsContentModelHookPlugin](../../references/headless-cms/api/interfaces/cmscontentmodelhookplugin).
+The plugin type to define the hooks is [CmsContentModelHookPlugin](../../../references/headless-cms/api/interfaces/cmscontentmodelhookplugin).
 
 All hooks are async and are executed in the order the plugins were registered. You can check that [here](https://github.com/webiny/webiny-js/blob/v5/packages/api-headless-cms/src/content/plugins/crud/contentModel/runContentModelLifecycleHooks.ts).
 
@@ -78,7 +78,7 @@ const modelServiceAfterCreate = (): CmsContentModelHookPlugin => ({
 ### Before update
 This hook is triggered before we store the updated content model to the storage.
 This is a bit specific hook since it receives a data object which contains changes from the input.
-Arguments interface is [CmsContentModelUpdateHookPluginArgs](../../reference/headless-cms/api/cmscontentmodelupdatehookpluginargs).
+Arguments interface is [CmsContentModelUpdateHookPluginArgs](../../../references/headless-cms/api/interfaces/cmscontentmodelupdatehookpluginargs).
 
 We use this hook to check if `titleFieldId` changed and if it is set correctly according to our specifications.
 Also, we check if any field that has been used in the entries was removed or changed, and we do not allow it.
