--- a/docs/references/headless-cms/api/index.mdx
+++ b/docs/references/headless-cms/api/index.mdx
@@ -7,169 +7,175 @@ keywords: ["webiny", "references"]
 
 ### ContentEntry Interfaces
 
-- [CmsContentEntry](interfaces/cmscontententry)
-- [CmsContentEntryContext](interfaces/cmscontententrycontext)
-- [CmsContentEntryGetArgs](interfaces/cmscontententrygetargs)
-- [CmsContentEntryHookPlugin](interfaces/cmscontententryhookplugin)
-- [CmsContentEntryListArgs](interfaces/cmscontententrylistargs)
-- [CmsContentEntryListOptions](interfaces/cmscontententrylistoptions)
-- [CmsContentEntryListWhere](interfaces/cmscontententrylistwhere)
-- [CmsContentEntryMeta](interfaces/cmscontententrymeta)
-- [CmsContentIndexEntry](interfaces/cmscontentindexentry)
-- [CmsContentModelManager](interfaces/cmscontentmodelmanager)
-- [CmsModelFieldToElasticsearchPlugin](interfaces/cmsmodelfieldtoelasticsearchplugin)
-- [CmsModelFieldToStoragePlugin](interfaces/cmsmodelfieldtostorageplugin)
-- [ContentModelManagerPlugin](interfaces/contentmodelmanagerplugin)
+- [CmsContentEntry](interfaces/cmscontententry.md)
+- [CmsContentEntryContext](interfaces/cmscontententrycontext.md)
+- [CmsContentEntryGetArgs](interfaces/cmscontententrygetargs.md)
+- [CmsContentEntryHookPlugin](interfaces/cmscontententryhookplugin.md)
+- [CmsContentEntryHookPluginArgs](interfaces/cmscontententryhookpluginargs.md)
+- [CmsContentEntryListArgs](interfaces/cmscontententrylistargs.md)
+- [CmsContentEntryListOptions](interfaces/cmscontententrylistoptions.md)
+- [CmsContentEntryListWhere](interfaces/cmscontententrylistwhere.md)
+- [CmsContentEntryMeta](interfaces/cmscontententrymeta.md)
+- [CmsContentIndexEntry](interfaces/cmscontentindexentry.md)
+- [CmsContentModelManager](interfaces/cmscontentmodelmanager.md)
+- [CmsModelFieldToElasticsearchPlugin](interfaces/cmsmodelfieldtoelasticsearchplugin.md)
+- [CmsModelFieldToStoragePlugin](interfaces/cmsmodelfieldtostorageplugin.md)
+- [ContentModelManagerPlugin](interfaces/contentmodelmanagerplugin.md)
 
 ### ContentModel Interfaces
 
-- [CmsContentModel](interfaces/cmscontentmodel)
-- [CmsContentModelContext](interfaces/cmscontentmodelcontext)
-- [CmsContentModelCreateInput](interfaces/cmscontentmodelcreateinput)
-- [CmsContentModelHookPlugin](interfaces/cmscontentmodelhookplugin)
-- [CmsContentModelManager](interfaces/cmscontentmodelmanager)
-- [CmsContentModelUpdateInput](interfaces/cmscontentmodelupdateinput)
-- [CmsModelLockedFieldPlugin](interfaces/cmsmodellockedfieldplugin)
-- [ContentModelManagerPlugin](interfaces/contentmodelmanagerplugin)
+- [CmsContentModel](interfaces/cmscontentmodel.md)
+- [CmsContentModelContext](interfaces/cmscontentmodelcontext.md)
+- [CmsContentModelCreateInput](interfaces/cmscontentmodelcreateinput.md)
+- [CmsContentModelHookPlugin](interfaces/cmscontentmodelhookplugin.md)
+- [CmsContentModelHookPluginArgs](interfaces/cmscontentmodelhookpluginargs.md)
+- [CmsContentModelManager](interfaces/cmscontentmodelmanager.md)
+- [CmsContentModelUpdateHookPluginArgs](interfaces/cmscontentmodelupdatehookpluginargs.md)
+- [CmsContentModelUpdateInput](interfaces/cmscontentmodelupdateinput.md)
+- [CmsModelLockedFieldPlugin](interfaces/cmsmodellockedfieldplugin.md)
+- [ContentModelManagerPlugin](interfaces/contentmodelmanagerplugin.md)
 
 ### ContentModelField Interfaces
 
-- [CmsContentModelField](interfaces/cmscontentmodelfield)
-- [CmsContentModelFieldInput](interfaces/cmscontentmodelfieldinput)
-- [CmsContentModelFieldPredefinedValues](interfaces/cmscontentmodelfieldpredefinedvalues)
-- [CmsContentModelFieldValidation](interfaces/cmscontentmodelfieldvalidation)
-- [CmsFieldTypePlugins](interfaces/cmsfieldtypeplugins)
-- [CmsModelFieldDefinition](interfaces/cmsmodelfielddefinition)
-- [CmsModelFieldPatternValidatorPlugin](interfaces/cmsmodelfieldpatternvalidatorplugin)
-- [CmsModelFieldToElasticsearchPlugin](interfaces/cmsmodelfieldtoelasticsearchplugin)
-- [CmsModelFieldToGraphQLPlugin](interfaces/cmsmodelfieldtographqlplugin)
-- [CmsModelFieldToStoragePlugin](interfaces/cmsmodelfieldtostorageplugin)
-- [CmsModelFieldToStoragePluginFromStorageArgs](interfaces/cmsmodelfieldtostoragepluginfromstorageargs)
-- [CmsModelFieldToStoragePluginToStorageArgs](interfaces/cmsmodelfieldtostorageplugintostorageargs)
-- [CmsModelFieldValidatorPlugin](interfaces/cmsmodelfieldvalidatorplugin)
-- [CmsModelFieldValidatorValidateArgs](interfaces/cmsmodelfieldvalidatorvalidateargs)
-- [LockedField](interfaces/lockedfield)
+- [CmsContentModelField](interfaces/cmscontentmodelfield.md)
+- [CmsContentModelFieldInput](interfaces/cmscontentmodelfieldinput.md)
+- [CmsContentModelFieldPredefinedValues](interfaces/cmscontentmodelfieldpredefinedvalues.md)
+- [CmsContentModelFieldValidation](interfaces/cmscontentmodelfieldvalidation.md)
+- [CmsFieldTypePlugins](interfaces/cmsfieldtypeplugins.md)
+- [CmsModelFieldDefinition](interfaces/cmsmodelfielddefinition.md)
+- [CmsModelFieldPatternValidatorPlugin](interfaces/cmsmodelfieldpatternvalidatorplugin.md)
+- [CmsModelFieldToElasticsearchPlugin](interfaces/cmsmodelfieldtoelasticsearchplugin.md)
+- [CmsModelFieldToGraphQLPlugin](interfaces/cmsmodelfieldtographqlplugin.md)
+- [CmsModelFieldToStoragePlugin](interfaces/cmsmodelfieldtostorageplugin.md)
+- [CmsModelFieldToStoragePluginFromStorageArgs](interfaces/cmsmodelfieldtostoragepluginfromstorageargs.md)
+- [CmsModelFieldToStoragePluginToStorageArgs](interfaces/cmsmodelfieldtostorageplugintostorageargs.md)
+- [CmsModelFieldValidatorPlugin](interfaces/cmsmodelfieldvalidatorplugin.md)
+- [CmsModelFieldValidatorValidateArgs](interfaces/cmsmodelfieldvalidatorvalidateargs.md)
+- [LockedField](interfaces/lockedfield.md)
 
 ### ContentModelGroup Interfaces
 
-- [CmsContentModelGroup](interfaces/cmscontentmodelgroup)
-- [CmsContentModelGroupContext](interfaces/cmscontentmodelgroupcontext)
-- [CmsContentModelGroupCreateInput](interfaces/cmscontentmodelgroupcreateinput)
-- [CmsContentModelGroupListArgs](interfaces/cmscontentmodelgrouplistargs)
-- [CmsContentModelGroupUpdateInput](interfaces/cmscontentmodelgroupupdateinput)
+- [CmsContentModelGroup](interfaces/cmscontentmodelgroup.md)
+- [CmsContentModelGroupContext](interfaces/cmscontentmodelgroupcontext.md)
+- [CmsContentModelGroupCreateInput](interfaces/cmscontentmodelgroupcreateinput.md)
+- [CmsContentModelGroupListArgs](interfaces/cmscontentmodelgrouplistargs.md)
+- [CmsContentModelGroupUpdateInput](interfaces/cmscontentmodelgroupupdateinput.md)
 
 ### Context Interfaces
 
-- [CmsContentEntryContext](interfaces/cmscontententrycontext)
-- [CmsContentModelContext](interfaces/cmscontentmodelcontext)
-- [CmsContentModelGroupContext](interfaces/cmscontentmodelgroupcontext)
-- [CmsContentModelManager](interfaces/cmscontentmodelmanager)
-- [CmsContext](interfaces/cmscontext)
-- [CmsSettingsContext](interfaces/cmssettingscontext)
+- [CmsContentEntryContext](interfaces/cmscontententrycontext.md)
+- [CmsContentModelContext](interfaces/cmscontentmodelcontext.md)
+- [CmsContentModelGroupContext](interfaces/cmscontentmodelgroupcontext.md)
+- [CmsContentModelManager](interfaces/cmscontentmodelmanager.md)
+- [CmsContext](interfaces/cmscontext.md)
+- [CmsSettingsContext](interfaces/cmssettingscontext.md)
 
 ### Database model Interfaces
 
-- [CmsContentEntry](interfaces/cmscontententry)
-- [CmsContentModel](interfaces/cmscontentmodel)
-- [CmsContentModelField](interfaces/cmscontentmodelfield)
-- [CmsContentModelGroup](interfaces/cmscontentmodelgroup)
-- [CmsSettings](interfaces/cmssettings)
+- [CmsContentEntry](interfaces/cmscontententry.md)
+- [CmsContentModel](interfaces/cmscontentmodel.md)
+- [CmsContentModelField](interfaces/cmscontentmodelfield.md)
+- [CmsContentModelGroup](interfaces/cmscontentmodelgroup.md)
+- [CmsSettings](interfaces/cmssettings.md)
 
 ### Elasticsearch Interfaces
 
-- [CmsContentIndexEntry](interfaces/cmscontentindexentry)
-- [CmsModelFieldToElasticsearchPlugin](interfaces/cmsmodelfieldtoelasticsearchplugin)
-- [ElasticsearchQuery](interfaces/elasticsearchquery)
-- [ElasticsearchQueryBuilderArgsPlugin](interfaces/elasticsearchquerybuilderargsplugin)
-- [ElasticsearchQueryBuilderPlugin](interfaces/elasticsearchquerybuilderplugin)
+- [CmsContentIndexEntry](interfaces/cmscontentindexentry.md)
+- [CmsModelFieldToElasticsearchPlugin](interfaces/cmsmodelfieldtoelasticsearchplugin.md)
+- [ElasticsearchQuery](interfaces/elasticsearchquery.md)
+- [ElasticsearchQueryBuilderArgsPlugin](interfaces/elasticsearchquerybuilderargsplugin.md)
+- [ElasticsearchQueryBuilderPlugin](interfaces/elasticsearchquerybuilderplugin.md)
 
 ### FieldValidation Interfaces
 
-- [CmsContentModelFieldValidation](interfaces/cmscontentmodelfieldvalidation)
-- [CmsModelFieldPatternValidatorPlugin](interfaces/cmsmodelfieldpatternvalidatorplugin)
-- [CmsModelFieldValidatorPlugin](interfaces/cmsmodelfieldvalidatorplugin)
-- [CmsModelFieldValidatorValidateArgs](interfaces/cmsmodelfieldvalidatorvalidateargs)
+- [CmsContentModelFieldValidation](interfaces/cmscontentmodelfieldvalidation.md)
+- [CmsModelFieldPatternValidatorPlugin](interfaces/cmsmodelfieldpatternvalidatorplugin.md)
+- [CmsModelFieldValidatorPlugin](interfaces/cmsmodelfieldvalidatorplugin.md)
+- [CmsModelFieldValidatorValidateArgs](interfaces/cmsmodelfieldvalidatorvalidateargs.md)
 
 ### General Interfaces
 
-- [CreatedBy](interfaces/createdby)
+- [CreatedBy](interfaces/createdby.md)
 
 ### GraphQL Interfaces
 
-- [CmsModelFieldToGraphQLPlugin](interfaces/cmsmodelfieldtographqlplugin)
+- [CmsModelFieldToGraphQLPlugin](interfaces/cmsmodelfieldtographqlplugin.md)
 
 ### GraphQL args Interfaces
 
-- [CmsContentEntryGetArgs](interfaces/cmscontententrygetargs)
-- [CmsContentEntryListArgs](interfaces/cmscontententrylistargs)
-- [CmsContentEntryListWhere](interfaces/cmscontententrylistwhere)
-- [CmsContentModelCreateInput](interfaces/cmscontentmodelcreateinput)
-- [CmsContentModelFieldInput](interfaces/cmscontentmodelfieldinput)
-- [CmsContentModelGroupCreateInput](interfaces/cmscontentmodelgroupcreateinput)
-- [CmsContentModelGroupListArgs](interfaces/cmscontentmodelgrouplistargs)
-- [CmsContentModelGroupUpdateInput](interfaces/cmscontentmodelgroupupdateinput)
-- [CmsContentModelUpdateInput](interfaces/cmscontentmodelupdateinput)
+- [CmsContentEntryGetArgs](interfaces/cmscontententrygetargs.md)
+- [CmsContentEntryListArgs](interfaces/cmscontententrylistargs.md)
+- [CmsContentEntryListWhere](interfaces/cmscontententrylistwhere.md)
+- [CmsContentModelCreateInput](interfaces/cmscontentmodelcreateinput.md)
+- [CmsContentModelFieldInput](interfaces/cmscontentmodelfieldinput.md)
+- [CmsContentModelGroupCreateInput](interfaces/cmscontentmodelgroupcreateinput.md)
+- [CmsContentModelGroupListArgs](interfaces/cmscontentmodelgrouplistargs.md)
+- [CmsContentModelGroupUpdateInput](interfaces/cmscontentmodelgroupupdateinput.md)
+- [CmsContentModelUpdateInput](interfaces/cmscontentmodelupdateinput.md)
 
 ### GraphQL output Interfaces
 
-- [CmsContentEntryMeta](interfaces/cmscontententrymeta)
+- [CmsContentEntryMeta](interfaces/cmscontententrymeta.md)
 
 ### LifecycleHook Interfaces
 
-- [CmsContentEntryHookPlugin](interfaces/cmscontententryhookplugin)
-- [CmsContentModelHookPlugin](interfaces/cmscontentmodelhookplugin)
+- [CmsContentEntryHookPlugin](interfaces/cmscontententryhookplugin.md)
+- [CmsContentEntryHookPluginArgs](interfaces/cmscontententryhookpluginargs.md)
+- [CmsContentModelHookPlugin](interfaces/cmscontentmodelhookplugin.md)
+- [CmsContentModelHookPluginArgs](interfaces/cmscontentmodelhookpluginargs.md)
+- [CmsContentModelUpdateHookPluginArgs](interfaces/cmscontentmodelupdatehookpluginargs.md)
 
 ### Plugin Interfaces
 
-- [CmsContentEntryHookPlugin](interfaces/cmscontententryhookplugin)
-- [CmsContentModelHookPlugin](interfaces/cmscontentmodelhookplugin)
-- [CmsModelFieldPatternValidatorPlugin](interfaces/cmsmodelfieldpatternvalidatorplugin)
-- [CmsModelFieldToElasticsearchPlugin](interfaces/cmsmodelfieldtoelasticsearchplugin)
-- [CmsModelFieldToGraphQLPlugin](interfaces/cmsmodelfieldtographqlplugin)
-- [CmsModelFieldToStoragePlugin](interfaces/cmsmodelfieldtostorageplugin)
-- [CmsModelFieldToStoragePluginFromStorageArgs](interfaces/cmsmodelfieldtostoragepluginfromstorageargs)
-- [CmsModelFieldToStoragePluginToStorageArgs](interfaces/cmsmodelfieldtostorageplugintostorageargs)
-- [CmsModelFieldValidatorPlugin](interfaces/cmsmodelfieldvalidatorplugin)
-- [CmsModelLockedFieldPlugin](interfaces/cmsmodellockedfieldplugin)
-- [ContentModelManagerPlugin](interfaces/contentmodelmanagerplugin)
-- [ElasticsearchQueryBuilderArgsPlugin](interfaces/elasticsearchquerybuilderargsplugin)
-- [ElasticsearchQueryBuilderPlugin](interfaces/elasticsearchquerybuilderplugin)
+- [CmsContentEntryHookPlugin](interfaces/cmscontententryhookplugin.md)
+- [CmsContentModelHookPlugin](interfaces/cmscontentmodelhookplugin.md)
+- [CmsModelFieldPatternValidatorPlugin](interfaces/cmsmodelfieldpatternvalidatorplugin.md)
+- [CmsModelFieldToElasticsearchPlugin](interfaces/cmsmodelfieldtoelasticsearchplugin.md)
+- [CmsModelFieldToGraphQLPlugin](interfaces/cmsmodelfieldtographqlplugin.md)
+- [CmsModelFieldToStoragePlugin](interfaces/cmsmodelfieldtostorageplugin.md)
+- [CmsModelFieldToStoragePluginFromStorageArgs](interfaces/cmsmodelfieldtostoragepluginfromstorageargs.md)
+- [CmsModelFieldToStoragePluginToStorageArgs](interfaces/cmsmodelfieldtostorageplugintostorageargs.md)
+- [CmsModelFieldValidatorPlugin](interfaces/cmsmodelfieldvalidatorplugin.md)
+- [CmsModelLockedFieldPlugin](interfaces/cmsmodellockedfieldplugin.md)
+- [ContentModelManagerPlugin](interfaces/contentmodelmanagerplugin.md)
+- [ElasticsearchQueryBuilderArgsPlugin](interfaces/elasticsearchquerybuilderargsplugin.md)
+- [ElasticsearchQueryBuilderPlugin](interfaces/elasticsearchquerybuilderplugin.md)
 
 ### Storage Interfaces
 
-- [CmsModelFieldToStoragePlugin](interfaces/cmsmodelfieldtostorageplugin)
-- [CmsModelFieldToStoragePluginFromStorageArgs](interfaces/cmsmodelfieldtostoragepluginfromstorageargs)
-- [CmsModelFieldToStoragePluginToStorageArgs](interfaces/cmsmodelfieldtostorageplugintostorageargs)
+- [CmsModelFieldToStoragePlugin](interfaces/cmsmodelfieldtostorageplugin.md)
+- [CmsModelFieldToStoragePluginFromStorageArgs](interfaces/cmsmodelfieldtostoragepluginfromstorageargs.md)
+- [CmsModelFieldToStoragePluginToStorageArgs](interfaces/cmsmodelfieldtostorageplugintostorageargs.md)
 
 ### ContentEntry Type aliases
 
-- [CmsContentEntryListSort](types/cmscontententrylistsort)
-- [CmsContentEntryPermission](types/cmscontententrypermission)
-- [CmsContentEntryResolverFactory](types/cmscontententryresolverfactory)
+- [CmsContentEntryListSort](types/cmscontententrylistsort.md)
+- [CmsContentEntryPermission](types/cmscontententrypermission.md)
+- [CmsContentEntryResolverFactory](types/cmscontententryresolverfactory.md)
 
 ### ContentModel Type aliases
 
-- [CmsContentModelPermission](types/cmscontentmodelpermission)
+- [CmsContentModelPermission](types/cmscontentmodelpermission.md)
 
 ### ContentModelGroup Type aliases
 
-- [CmsContentModelGroupPermission](types/cmscontentmodelgrouppermission)
+- [CmsContentModelGroupPermission](types/cmscontentmodelgrouppermission.md)
 
 ### Elasticsearch Type aliases
 
-- [ElasticsearchQueryOperator](types/elasticsearchqueryoperator)
+- [ElasticsearchQueryOperator](types/elasticsearchqueryoperator.md)
 
 ### GraphQL args Type aliases
 
-- [CmsContentEntryListSort](types/cmscontententrylistsort)
+- [CmsContentEntryListSort](types/cmscontententrylistsort.md)
 
 ### GraphQL resolver Type aliases
 
-- [CmsContentEntryResolverFactory](types/cmscontententryresolverfactory)
+- [CmsContentEntryResolverFactory](types/cmscontententryresolverfactory.md)
 
 ### SecurityPermission Type aliases
 
-- [CmsContentEntryPermission](types/cmscontententrypermission)
-- [CmsContentModelGroupPermission](types/cmscontentmodelgrouppermission)
-- [CmsContentModelPermission](types/cmscontentmodelpermission)
-- [CmsSettingsPermission](types/cmssettingspermission)
+- [CmsContentEntryPermission](types/cmscontententrypermission.md)
+- [CmsContentModelGroupPermission](types/cmscontentmodelgrouppermission.md)
+- [CmsContentModelPermission](types/cmscontentmodelpermission.md)
+- [CmsSettingsPermission](types/cmssettingspermission.md)
